--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="Biblia.jpeg" class="nav-img " loading="lazy">
+            <img src="https://imgv3.fotor.com/images/homepage-feature-card/Carro-PNG.jpg" class="nav-img " loading="lazy">
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
