--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         class="btn btn-primary btn-lg botao-inicio fw-semibold">Quero
                         conhecer!</a>
                 </div>
-                <img src="Biblia.jpeg" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
+                <img src="Tiro vertical em escala de cinza de um campo gramado com uma cruz borrada _ Foto Grátis.jpeg" alt="A imagem apresenta o grupo musical Os mutantes, sao tres pessoas cantando em um microfone" title="Os mutantes - CC0 Domínio Público / Acervo Arquivo Nacional" class="img-fluid img-inicio">
 
               </div>
         </section>
