--- a/index.html
+++ b/index.html
@@ -57,12 +57,11 @@
                     <img src="DOCTRINA_Y_CONVENIOS_130_22-removebg-preview.png" class="rounded-pill" width="273" height="331" loading="lazy">
                 </div>
                 <div class="col-5">
-                    <h2>O que foi a Tropicália?</h2>
-                    <p class="p-2">A Tropicália, também conhecida como Tropicalismo, foi um movimento cultural
-                        brasileiro que surgiu na década de 1960, tendo seu auge entre 1967 e 1968. Esse movimento
-                        abrangeu várias expressões artísticas, como a música, o cinema, o teatro e as artes plásticas, e
-                        teve como principal característica a mistura de elementos da cultura brasileira tradicional com
-                        influências estrangeiras, especialmente do rock e da música pop. Fonte: Site Toda a matéria</p>
+                    <h2>Quem era Jesus?</h2>
+                    <p class="p-2">Jesus Cristo é a figura central do Cristianismo, considerado pelos cristãos como o Filho de Deus e o Salvador da humanidade.
+                        Nascido em Belém, criado em Nazaré, pregou ensinamentos de amor, perdão e justiça, realizando milagres que atraíram seguidores e desafiaram autoridades religiosas e políticas.
+                        Crucificado sob Pôncio Pilatos (por volta de 30 d.C.), sua ressurreição, três dias depois, tornou-se fundamento da fé cristã, simbolizando redenção e vida eterna.
+                        Além do impacto religioso, sua mensagem influenciou ética, cultura e civilização ocidental, moldando a história por dois milênios.</p>
                 </div>
             </div>
         </section>
