--- a/index.html
+++ b/index.html
@@ -72,20 +72,20 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="Biblia.jpeg"
+                        <img src="3 Bad Arguments for the Existence of Jesus.jpeg"
                             class="HOLYBIBLE.jpeg">
                     </div>
                     <div class="col-md-4">
-                        <img src="Biblia.jpeg" class="img-fluid rounded-5"
+                        <img src="637dd5eb-d3db-4854-9426-5c03d042e818.jpeg" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="Biblia.jpeg" class="img-fluid rounded-5" loading="lazy">
+                        <img src="The Word, Printable Art_ Backdrop 8' x 10' Scale Christian Art.jpeg" class="img-fluid rounded-5" loading="lazy">
                     </div>
                     <div class="col-md-4">
-                        <img src="Biblia.jpeg"
+                        <img src="Homem_rezando_com_a_Bíblia___Foto_Premium-removebg-preview.png"
                             class="img-fluid rounded-5" loading="lazy">
                     </div>
                 </div>
