--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
 
                 <div class="row justify-content-md-center">
                     <div class="col-md-4">
-                        <img src="3 Bad Arguments for the Existence of Jesus.jpeg"
+                        <img src="637dd5eb-d3db-4854-9426-5c03d042e818.jpeg"
                             class="HOLYBIBLE.jpeg">
                     </div>
                     <div class="col-md-4">
-                        <img src="637dd5eb-d3db-4854-9426-5c03d042e818.jpeg" class="img-fluid rounded-5"
+                        <img src="3 Bad Arguments for the Existence of Jesus.jpeg." class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
