--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                             class="HOLYBIBLE.jpeg">
                     </div>
                     <div class="col-md-4">
-                        <img src="3 Bad Arguments for the Existence of Jesus.jpeg." class="img-fluid rounded-5"
+                        <img src="Homem_rezando_com_a_Bíblia___Foto_Premium-removebg-preview.png" class="img-fluid rounded-5"
                             loading="lazy">
                     </div>
                 </div>
